--- a/home/home.html
+++ b/home/home.html
@@ -13,35 +13,69 @@
 <body>
 
  <!-- ================= Header ================== -->
- <div class="container hero-section hero-home-page">
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="w-nav-brand w--current">
-        <div class="logo-text">
-          <font style="vertical-align: inherit;">
-            <strong>
-              <font style="vertical-align: inherit;">PROJETO</font>
-            </strong>
-            <font style="vertical-align: inherit;">Blogue</font>
-          </font>
-        </div>
-      </a>
-      <!-- button toggler -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="w-menu w-nav-menu">
-        <a href="/home/home.html" class="nav-link w-nav-link w--current">Home</a>
-        <a href="" class="">Sobre</a>
-        <a href="" class="">Portfólio</a>
-        <a href="" class="">Blogue</a>
-        <a href="" class="">Contato</a>
-      </div>
+ <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" aria-label="Furni navigation bar">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <font style="vertical-align:inherit ;">
+        <font style="vertical-align:inherit;">Mobiliário</font>
+      </font>
+      <span>
+        <font style="vertical-align:inherit">
+          <font style="vertical-align:inherit;">.</font>
+        </font>
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Alternar de navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="navbarsFurni">
+      <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+        <li class="nav-item action">
+          <a class="nav-link">
+            <font style="vertical-align:inherit;">
+              <font style="vertical-align:inherit;">Home</font>
+            </font>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link">
+            <font style="vertical-align:inherit;">
+              <font style="vertical-align:inherit;">Home</font>
+            </font>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link">
+            <font style="vertical-align:inherit;">
+              <font style="vertical-align:inherit;">Home</font>
+            </font>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link">
+            <font style="vertical-align:inherit;">
+              <font style="vertical-align:inherit;">Home</font>
+            </font>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link">
+            <font style="vertical-align:inherit;">
+              <font style="vertical-align:inherit;">Home</font>
+            </font>
+          </a>
+        </li>
+        <li>
+          <a class="nav-link">
+            <font style="vertical-align:inherit;">
+              <font style="vertical-align:inherit;">Home</font>
+            </font>
+          </a>
+        </li>
+      </ul>
     </div>
-  </nav>
- </div>
-
+  </div>
+ </nav>
 
 
  <!-- ================================ JS Bootstrap ================================================= -->
