--- a/home/home.html
+++ b/home/home.html
@@ -2,82 +2,117 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- =========================  Bootstrap ============================================== -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- ========================== style.css =============================================  -->
-    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
+
+    <!-- BOOSTRAP CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- style.css -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-
- <!-- ================= Header ================== -->
- <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" aria-label="Furni navigation bar">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <font style="vertical-align:inherit ;">
-        <font style="vertical-align:inherit;">Mobiliário</font>
-      </font>
-      <span>
-        <font style="vertical-align:inherit">
-          <font style="vertical-align:inherit;">.</font>
-        </font>
-      </span>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Alternar de navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="navbarsFurni">
-      <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-        <li class="nav-item action">
-          <a class="nav-link">
-            <font style="vertical-align:inherit;">
-              <font style="vertical-align:inherit;">Home</font>
-            </font>
-          </a>
-        </li>
-        <li>
-          <a class="nav-link">
-            <font style="vertical-align:inherit;">
-              <font style="vertical-align:inherit;">Home</font>
-            </font>
-          </a>
-        </li>
-        <li>
-          <a class="nav-link">
-            <font style="vertical-align:inherit;">
-              <font style="vertical-align:inherit;">Home</font>
-            </font>
-          </a>
-        </li>
-        <li>
-          <a class="nav-link">
-            <font style="vertical-align:inherit;">
-              <font style="vertical-align:inherit;">Home</font>
-            </font>
-          </a>
-        </li>
-        <li>
-          <a class="nav-link">
-            <font style="vertical-align:inherit;">
-              <font style="vertical-align:inherit;">Home</font>
-            </font>
-          </a>
-        </li>
-        <li>
-          <a class="nav-link">
-            <font style="vertical-align:inherit;">
-              <font style="vertical-align:inherit;">Home</font>
-            </font>
-          </a>
-        </li>
-      </ul>
+<body class="vsc-initialized">
+    
+    <!-- header -->
+    <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark" arial-label="Furni navigation bar">
+        <div class="container">
+            <a class="navbar-brand">
+                <font style="vertical-align: inherit;">
+                    <font style="vertical-align: inherit;">Mobiliário </font>
+                </font>
+                <span>
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit;">.</font>
+                    </font>
+                </span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false"  aria-label="Alternar de navegação">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarsFurni">
+                <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item active">
+                        <a class="nav-link">
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Home</font>
+                            </font>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="">Comprar</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="">Sobre nós</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="">Serviços</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="">Blogue</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="">Contate-nos</a>
+                    </li>
+                </ul>
+                <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+                    <li>
+                        <a class="nav-link">
+                            <img src="../img/user.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link">
+                           <img src="../img/cart.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="hero">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-5">
+                    <div class="intro-excerpt">
+                        <h1>
+                            <font style="vertical-align: inherit;">
+                                <span clsas="d-block">
+                                    <font style="vertical-align: inherit;">Estúdio de design</font>
+                                </span>
+                                <font style="vertical-align: inherit;"> de interiores moderno</font>
+                            </font>
+                            <span>
+                                <font style="vertical-align: inherit;"></font>
+                            </span>
+                        </h1>
+                        <p class="mb-4">
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</font>
+                            </font>
+                        </p>
+                        <p>
+                            <a href="" class="btn btn-secondary me-2">
+                                <font style="vertical-align: inherit;">
+                                    <font style="vertical-align: inherit;">Compre agora</font>
+                                </font>
+                            </a>
+                            <a href="" class="btn btn-white-outline">
+                                <font style="vertical-align: inherit;">
+                                    <font style="vertical-align: inherit;">Explorar</font>
+                                </font>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="hero-img-wrap">
+                        <img src="../img/couch.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
- </nav>
 
-
- <!-- ================================ JS Bootstrap ================================================= -->
+ <!-- BOOSTRAP JS -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </body>
 </html>
