--- a/home/home.html
+++ b/home/home.html
@@ -111,7 +111,382 @@
             </div>
         </div>
     </div>
-
+   <!-- section  --> 
+   <div class="product-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
+                <h2 class="mb-4 section-title">
+                    <font style="vertical-align:inherit;">
+                        <font style="vertical-align:inherit;">Confeccionado com excelente material.</font>
+                    </font>
+                </h2>
+                <p class="mb-4">
+                    <font style="vertical-align:inherit;">
+                        <font style="vertical-align:inherit ;">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</font>
+                    </font>
+                </p>
+                <p>
+                    <a href="" class="btn-section">
+                        <font style="vertical-align:inherit;">
+                            <font style="vertical-align:inherit;">Explorar</font>
+                        </font>
+                    </a>
+                </p>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+                <a class="product-item">
+                    <img src="../img/product-1.png" alt="" class="img-fluid product-thumbnail">
+                    <h3 class="product-title">
+                        <font style="vertical-align:inherit;">
+                            <font style="vertical-align:inherit;">Cadeira Nórdica</font>
+                        </font>
+                    </h3>
+                    <strong class="product-price">
+                        <font style="vertical-align:inherit ;">
+                            <font style="vertical-align:inherit ;">R$ 50,00</font>
+                        </font>
+                    </strong>
+                    <span class="icon-cross">
+                        <img src="" alt="" class="img-fluid" >
+                    </span>
+                </a>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+                <a class="product-item">
+                    <img src="../img/product-2.png" alt="" class="img-fluid product-thumbnail">
+                    <h3 class="product-title">
+                        <font style="vertical-align:inherit;">
+                            <font style="vertical-align:inherit;">Cadeira Kruzo Aero</font>
+                        </font>
+                    </h3>
+                    <strong class="product-price">
+                        <font style="vertical-align:inherit ;">
+                            <font style="vertical-align:inherit ;">R$ 78,00</font>
+                        </font>
+                    </strong>
+                    <span class="icon-cross">
+                        <img src="" alt="" class="img-fluid" >
+                    </span>
+                </a>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+                <a class="product-item">
+                    <img src="../img/product-3.png" alt="" class="img-fluid product-thumbnail">
+                    <h3 class="product-title">
+                        <font style="vertical-align:inherit;">
+                            <font style="vertical-align:inherit;">Cadeira Ergonômica</font>
+                        </font>
+                    </h3>
+                    <strong class="product-price">
+                        <font style="vertical-align:inherit ;">
+                            <font style="vertical-align:inherit ;">R$ 43,00</font>
+                        </font>
+                    </strong>
+                    <span class="icon-cross">
+                        <img src="" alt="" class="img-fluid" >
+                    </span>
+                </a>
+            </div>
+        </div>
+    </div>
+   </div>
+   <!-- section2 -->
+   <div class="why-choose-section">
+     <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-lg-6">
+                <h2 class="section-title">
+                    <font style="vertical-align:inherit;">
+                        <font style="vertical-align:inherit;">Porque escolher-nos</font>
+                    </font>
+                </h2>
+                <p>
+                 <font style="vertical-align:inherit;">
+                    <font style="vertical-align:inherit;">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</font>
+                 </font>
+                </p>
+                <div class="row my-5">
+                    <div class="col-6 col-md-6">
+                        <div class="feature">
+                            <div class="icon">
+                                <img src="../img/truck.svg" alt="" class="imf-fluid">
+                            </div>
+                            <h3>
+                             <font style="vertical-align:inherit ;">
+                                <font style="vertical-align:inherit ;">Frete rápido e grátis</font>
+                             </font>
+                            </h3>
+                            <p>
+                             <font style="vertical-align:inherit;">
+                                <font style="vertical-align:inherit;">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputado.</font>
+                             </font>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-6">
+                        <div class="feature">
+                            <div class="icon">
+                                <img src="../img/bag.svg" alt="" class="imf-fluid">
+                            </div>
+                            <h3>
+                             <font style="vertical-align:inherit ;">
+                                <font style="vertical-align:inherit ;">Fácil de comprar</font>
+                             </font>
+                            </h3>
+                            <p>
+                             <font style="vertical-align:inherit;">
+                                <font style="vertical-align:inherit;">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputado.</font>
+                             </font>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-6">
+                        <div class="feature">
+                            <div class="icon">
+                                <img src="../img/support.svg" alt="" class="imf-fluid">
+                            </div>
+                            <h3>
+                             <font style="vertical-align:inherit ;">
+                                <font style="vertical-align:inherit ;">Suporte 24 horas por dia, 7 dias por semana</font>
+                             </font>
+                            </h3>
+                            <p>
+                             <font style="vertical-align:inherit;">
+                                <font style="vertical-align:inherit;">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputado.</font>
+                             </font>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-6">
+                        <div class="feature">
+                            <div class="icon">
+                                <img src="../img/return.svg" alt="" class="imf-fluid">
+                            </div>
+                            <h3>
+                             <font style="vertical-align:inherit ;">
+                                <font style="vertical-align:inherit ;">Devoluções sem complicações</font>
+                             </font>
+                            </h3>
+                            <p>
+                             <font style="vertical-align:inherit;">
+                                <font style="vertical-align:inherit;">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputado.</font>
+                             </font>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="img-wrap">
+                    <img src="../img/why-choose-us-img.jpg" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+     </div>
+   </div>
+   <!-- section3 -->
+   <div class="we-help-section" >
+     <div class="container">
+        <div class="row row-section justify-content-between">
+            <div class="col-lg-7 mb-5 mb-lg-0">
+                <div class="imgs-grid">
+                    <div class="grid grid-1">
+                        <img src="../img/img-grid-1.jpg" alt="">
+                    </div>
+                    <div class="grid grid-2">
+                        <img src="../img/img-grid-2.jpg" alt="">
+                    </div>
+                    <div class="grid grid-3">
+                        <img src="../img/img-grid-3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+             <div class="col-lg-5 ps-lg-5">
+                    <h2 class="section-title mb-4">
+                        <font style="vertical-align: inherit;">
+                            <font style="vertical-align: inherit;">Nós ajudamos você a criar um design de interiores moderno</font>
+                        </font>
+                    </h2>
+                    <p>
+                      <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit;">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesco habitante morbi tristique senectus et netus et malesuada</font>
+                      </font>
+                    </p>
+                    <ul class="list-unstyled custom-list my-4">
+                        <li>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec vitae odio quis nisl dapibus malesuada</font>
+                            </font>
+                        </li>
+                        <li>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec vitae odio quis nisl dapibus malesuada</font>
+                            </font>
+                        </li>
+                        <li>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec vitae odio quis nisl dapibus malesuada</font>
+                            </font>
+                        </li>
+                        <li>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec vitae odio quis nisl dapibus malesuada</font>
+                            </font>
+                        </li>
+                    </ul>
+                    <p>
+                        <a href="" class="btn-section">
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Explorar</font>
+                            </font>
+                        </a>
+                    </p>
+            </div>
+        </div>
+     </div>
+   </div>
+   <!-- section4 -->
+   <div class="popular-product">
+     <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
+                <div class="product-item-sm d-flex">
+                    <div class="thumbnail">
+                        <img src="../img/product-1.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="pt-3">
+                        <h3>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Cadeira Nórdica</font>
+                            </font>
+                        </h3>
+                        <p>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio</font>
+                            </font>
+                        </p>
+                        <p>
+                          <a href="">
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">consulte Mais informação</font>
+                            </font>
+                          </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
+                <div class="product-item-sm d-flex">
+                    <div class="thumbnail">
+                        <img src="../img/product-2.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="pt-3">
+                        <h3>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Cadeira Kruzo Aero</font>
+                            </font>
+                        </h3>
+                        <p>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio</font>
+                            </font>
+                        </p>
+                        <p>
+                          <a href="">
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">consulte Mais informação</font>
+                            </font>
+                          </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
+                <div class="product-item-sm d-flex">
+                    <div class="thumbnail">
+                        <img src="../img/product-3.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="pt-3">
+                        <h3>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Cadeira Ergonômica</font>
+                            </font>
+                        </h3>
+                        <p>
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio</font>
+                            </font>
+                        </p>
+                        <p>
+                          <a href="">
+                            <font style="vertical-align: inherit;">
+                                <font style="vertical-align: inherit;">consulte Mais informação</font>
+                            </font>
+                          </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </div>
+   </div>
+   <!-- section5 -->
+   <div class="testimonial-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7 mx-auto text-center">
+                <h2 class="section-title">
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit;">Depoimentos</font>
+                    </font>
+                </h2>
+            </div>
+            <div class="row justify-content-center">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>
+    </div>
+   </div>
  <!-- BOOSTRAP JS -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </body>
